# UAVUGVFormation

./: README.md  UAV.yaml
MissionPlanner/: Read_me.txt  UGV.yaml  filtered_robots.yaml  mission.yaml  missionParsing.py
flock3.3/: communicationManager.nls  flockTestV3.3.nlogo  formationManager.nls  helper.nls  missionManager.nls  mvt-controller.nls  obstacleManager.nls  read_me  taskManager.nls
multirobots/: readme.txt
multirobots/coppeliasim_files/: epuck1.ttt  epuck_driver.lua
multirobots/ros2_multirobots_ws/: build_packages.sh
multirobots/ros2_multirobots_ws/src/epuck_controller/: CMakeLists.txt  package.xml
multirobots/ros2_multirobots_ws/src/epuck_controller/include/epuck_controller/: ccomputations.hpp  conf.hpp  control.hpp  defs.hpp  laser_scan.hpp  monitor.hpp  odometry.hpp  state_req_factory.hpp  utils.hpp
multirobots/ros2_multirobots_ws/src/epuck_controller/include/epuck_controller/control/: dfa.hpp  parameters.h  sensors_specific.hpp  shared.hpp  states.def  utils.hpp
multirobots/ros2_multirobots_ws/src/epuck_controller/src/: ccomputations.cpp  control.cpp  laser_scan.cpp  main.cpp  monitor.cpp  odometry.cpp  utils.cpp
multirobots/ros2_multirobots_ws/src/epuck_controller/src/control/: dfa.cpp  sensors_specific.cpp  shared.cpp
multirobots/ros2_multirobots_ws/src/mr_aggregator/: CMakeLists.txt  package.xml
multirobots/ros2_multirobots_ws/src/mr_clock/: CMakeLists.txt  package.xml
multirobots/ros2_multirobots_ws/src/mr_clock/src/: clock.cpp  g_clock.cpp
multirobots/ros2_multirobots_ws/src/mr_interfaces/: CMakeLists.txt  package.xml
multirobots/ros2_multirobots_ws/src/mr_oracle/: CMakeLists.txt  package.xml
(+23 files in other folders)
